tests/ui/substrate/id/fail_empty_path.rs
use obce::id;

fn main() {
    id!();
}
